# reliquary-archiver-mac

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  release.yml
resources/fallback/: AvatarConfig.json  AvatarSkillTreeConfig.json  EquipmentConfig.json  ItemConfig.json  MultiplePathAvatarConfig.json  RelicConfig.json  RelicMainAffixConfig.json  RelicSetConfig.json  RelicSubAffixConfig.json  TextMapEN.json
scripts/: install-macos-capture-permissions.sh
src/: main.rs  worker.rs
src/capture/: mod.rs  pcap.rs
src/export/fribbels/: handlers.rs
