[package]
name = "reliquary-archiver"
version = "0.15.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hhharryyyyy/reliquary-archiver-mac"
publish = false
readme = "README.md"
homepage = "https://github.com/hhharryyyyy/reliquary-archiver-mac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
chrono = "0.4.40"
color-eyre = "0.6.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
reliquary = { git = "https://github.com/IceDynamix/reliquary", tag = "v20.1.0", features = [
    "proto-rqa",
] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = { version = "0.3.31" }
serde_with = "3.12.0"
tracing-log = "0.2.0"
axum = { optional = true, version = "0.8.3", features = ["ws", "tracing"] }
pcap = { optional = true, version = "2.2.0", features = ["capture-stream"] }

[build-dependencies]
ureq = { version = "2.12.1", features = ["json"] }
reliquary = { git = "https://github.com/IceDynamix/reliquary", tag = "v20.1.0", features = [
    "proto-rqa",
] }

[profile.dev]
# there's a field in the kcp protocol that hyv uses differently from the default implementation
# (some kind of timestamp), except that i don't know what it is exactly and i haven't bothered
# to circumvent the addition that happens in the kcp library
overflow-checks = false

[profile.release]
opt-level = "z"         # optimize for size
lto = true
overflow-checks = false # see comment above

[features]
default = ["pcap", "stream"]
stream = ["dep:axum"]
pcap = ["dep:pcap"]
